Bump Kotlin to 2.0.0 (#51)